@@ -5,35 +5,26 @@ import java.util.List;
 import javax.persistence.EntityManager;
 import javax.persistence.PersistenceContext;
 
+import org.springframework.stereotype.Repository;
+
 import de.neusta.persistence.entity.DataBaseEntity;
 
-public abstract class GenericDao<T extends DataBaseEntity> {
+@Repository
+public class GenericDao<T extends DataBaseEntity> {
 
 	@PersistenceContext
 	protected EntityManager em;
 
 	@SuppressWarnings("unchecked")
-	public List<T> findAll() {
-		return this.em.createQuery("from " + getDataBaseName() + "")
+	public List<T> findAll(final Class<T> type) {
+		return this.em.createQuery("from " + type.getName() + "")
 				.getResultList();
 	}
 
-	@SuppressWarnings("unchecked")
-	public T getPerID(final long id) {
+	public T getPerID(final long id, final Class<T> type) {
 
-		T item = null;
-		String lid = Long.valueOf(id).toString();
-		String statement = "from " + getDataBaseName() + " where id = " + lid;
-		List<T> result = this.em.createQuery(statement).getResultList();
-		if (result != null && result.size() > 0) {
-			item = result.get(0);
-		}
-		
-		return (item != null) ? item : null;
-
+		return this.em.find(type, new Long(id));
 	}
-
-	public abstract String getDataBaseName();
 
 	public void remove(final T dao) {
 		this.em.remove(dao);
